.pipeline/k8s-manifest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coinbank
  labels:
    app: coinbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coinbank
  template:
    metadata:
      labels:
        app: coinbank
    spec:
      containers:
        - name: coinbank
          image: samirjha123/coinbank
          ports:
            - containerPort: 8080
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
